unified some classes to reduce code and keep continuity.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-	<title>TASK APP</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
-	<meta charset="utf-8" />
-	<link rel="stylesheet" href="./css/universal.css">
+  <title>TASK APP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="./css/universal.css">
 </head>
 
 <body>
-<div class="nav nav-index">
+  <div class="nav nav-index">
     <div class="button button--menu button--menu--index">MENU</div>
     <h1 class="title title--nav title--index">Task App</h1>
     <a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="button setting-button-img-nav" /></a>
@@ -31,16 +31,16 @@
       <li><a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="icon--menu-pane">Settings</a></li>
     </ul>
   </div>
-  
-  <div class = "container--index">
-    <div class = "box-container">
-      <input type="text" name="searchGroup" placeholder = "Search for a group to join" class = "searching--index"/>
+
+  <div class="container">
+    <div class="box-container">
+      <input type="text" name="searchGroup" placeholder="Search for a group to join" class="searching--index" />
     </div>
- 
-  
-   <div class="box-container">
+
+
+    <div class="box-container">
       <div class="box-top">
-        <span class = "box-top-title--index">Suggested Groups</span>
+        <span class="box-top-title--index">Suggested Groups</span>
       </div>
       <div>
         <div class="group-box-content--index">
@@ -49,7 +49,7 @@
             <span class="group-option--index">
               <span class="exit-group--index">Join Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
           <div class="group--index">
@@ -57,23 +57,23 @@
             <span class="group-option--index">
               <span class="exit-group--index">Join Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
           <div class="group--index"><span class="groups content--index">Dos Tacos</span>
             <span class="group-option--index">
               <span class="exit-group--index">Join Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
         </div>
       </div>
     </div>
-	
-	<div class="box-container">
+
+    <div class="box-container">
       <div class="box-top">
-        <span class = "box-top-title--index">List of Your Group</span>
+        <span class="box-top-title--index">List of Your Group</span>
       </div>
       <div>
         <div class="group-box-content--index">
@@ -82,7 +82,7 @@
             <span class="group-option--index">
               <span class="exit-group--index">Exit Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
           <div class="group--index">
@@ -90,23 +90,23 @@
             <span class="group-option--index">
               <span class="exit-group--index">Exit Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
           <div class="group--index"><span class="groups content--index">SFU Finance Club</span>
             <span class="group-option--index">
               <span class="exit-group--index">Exit Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
         </div>
       </div>
     </div>
-	
-	  <div class="box-container  create-group-button--index">+ Create Group</div>
-   </div>	
-	
+
+    <div class="box-container  create-group-button--index">+ Create Group</div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="./js/menu-pane.js"></script>
