--- a/preference.html
+++ b/preference.html
@@ -10,17 +10,15 @@
 
 <body>
   <div class="nav nav--task-top">
-    <h1 class="title title--nav">
-      <span class="setting-button"><img src="./image/setting-icon.png" alt="setting icon" width="30" height="30" /></span>
-      SETTINGS
-    </h1>
-    <a href="./index.html"><img src="./image/close-button.png" alt="close button" width = "21" height="21" class="close-button-img"/></a>
+    <h1 class="title title--nav title--nav-settings"><img class="setting-button-img-nav-preference" src="./image/setting-icon.png" alt="setting icon" width="30" height="30" />SETTINGS</h1>
+    <!-- TODO THE CLOSE BUTTON SHOULD GO BACK A PAGE, NOT TO THE INDEX PAGE. WILL FIX IT LATER USING JQUERY.-->
+    <a href="./index.html"><img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img" /></a>
   </div>
 
   <div class="container">
     <div class="box-container">
       <div class="box-top">
-        <span class = "box-top-title--preference">THEME</span>
+        <span class="box-top-title--preference">THEME</span>
       </div>
       <div class="box-container--preference">
         <div class="theme-option--preference">
@@ -35,7 +33,7 @@
 
     <div class="box-container">
       <div class="box-top">
-        <span class = "box-top-title--preference">NAME</span>
+        <span class="box-top-title--preference">NAME</span>
         <img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" />
       </div>
       <div>
@@ -47,7 +45,7 @@
 
     <div class="box-container ">
       <div class="box-top">
-        <span class = "box-top-title--preference">EMAIL</span>
+        <span class="box-top-title--preference">EMAIL</span>
         <img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" />
       </div>
       <div>
@@ -59,7 +57,7 @@
 
     <div class="box-container">
       <div class="box-top">
-        <span class = "box-top-title--preference">JOINED GROUP</span>
+        <span class="box-top-title--preference">JOINED GROUP</span>
       </div>
       <div>
         <div class="group-box-content--preference">
@@ -68,7 +66,7 @@
             <span class="group-option--preference">
               <span class="exit-group--preference">Exit Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
             </span>
           </div>
           <div class="group--preference">
@@ -76,14 +74,14 @@
             <span class="group-option--preference">
               <span class="exit-group--preference">Exit Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
             </span>
           </div>
           <div class="group--preference"><span class="groups content--preference">SFU Finance Club</span>
             <span class="group-option--preference">
               <span class="exit-group--preference">Exit Group</span>
               <span><a href="./group-info.html">
-			  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
+                  <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
             </span>
           </div>
 
