sign up and sign in page

--- a/group-info.html
+++ b/group-info.html
@@ -31,16 +31,16 @@
 	<div class="container">
 		<div class="box-container-group">
 			<div class="box-top">
-				<p>Created: Sept 9, 2018</p>
-				<p>Created by: Jun Jeong</p>
+				<h1>Created: Sept 9, 2018</h1>
+				<h1>Created by: Jun Jeong</h1>
 			</div>
 			<div class="box-container--group">
-				<p>SHARE TASK LIST</p>
+				<h1>SHARE TASK LIST</h1>
 			</div>
 		</div>
 		<div class="box-container-group">
 			<div class="box-top">
-				<p>DESCRIPTION</p>
+				<h1>DESCRIPTION</h1>
 			</div>
 			<div class="box-container--group">
 				<p>Simply dummy text that will be on here as a plce holder text , just like lorem ipsum</p>
@@ -48,25 +48,23 @@
 		</div>
 		<div class="box-container-group">
 			<div class="box-top">
-				<p>MEMBERS (23)</p>
+				<h1>MEMBERS (23)</h1>
 			</div>
 			<div class="box-container--group-1">
-				<div class="name-container-1">
-					<p>James</p>
-					<p>John</p>
-					<p>Jahala</p>
-					<p>Jay</p>
-					<p>Jquery</p>
-					<p>JSON</p>
-				</div>
-				<div class="name-container-2">
-					<p>Joanne</p>
-					<p>Jolly</p>
-					<p>Jimmy</p>
-					<p>Johnson</p>
-					<p>Javascript</p>
-					<p>Jason</p>
-				</div>
+				<ul class ="people-list">
+					<li>James</li>
+					<li>John</li>
+					<li>Jahala</li>
+					<li>Jay</li>
+					<li>Jquery</li>
+					<li>JSON</li>
+					<li>Joanne</li>
+					<li>Jolly</li>
+					<li>Jimmy</li>
+					<li>Johnson</li>
+					<li>Javascript</li>
+					<li>Jason</li>
+				</ul>
 			</div>
 		</div>
 		<div class="box-container-group">
