signup and signin page
replaced placeholder

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div class="container">
     <div class="box-container">
-      <input type="text" name="searchGroup" placeholder="Search for a group to join" class="searching--index" />
+      <input type="text" name="searchGroup" placeholder="Search for a group to join" class="textbox searching--index" />
     </div>
 
 
