--- a/sign in.html
+++ b/sign in.html
@@ -14,12 +14,12 @@
 	<div class="container">
 		<div class="box-container-signup">
 			<div class="box-container--group">
-				<p>USER NAME</p>
+				<input type="text" name="searchGroup" placeholder="Username" class="textbox textbox--signin"/>
 			</div>
 		</div>
 		<div class="box-container-signup">
 			<div class="box-container--group">
-				<p>PASSWORD</p>
+				<input type="password" name="searchGroup" placeholder="Password" class="textbox textbox--signin"/>
 			</div>
 		</div>
 		<div class="RememberMe">
