--- a/sign up.html
+++ b/sign up.html
@@ -17,7 +17,7 @@
 				<p>USER NAME</p>
 			</div>
 			<div class="box-container--group">
-				<p>Place Holder</p>
+				 <input type="text" name="searchGroup" placeholder="" class="textbox textbox--signup"/>
 			</div>
 		</div>
 		<div class="box-container-signup">
@@ -25,7 +25,7 @@
 				<p>PASSWORD</p>
 			</div>
 			<div class="box-container--group">
-				<p>Place Holder</p>
+				<input type="text" name="searchGroup" placeholder="" class="textbox textbox--signup"/>
 			</div>
 		</div>
 		<div class="box-container-signup">
@@ -33,7 +33,7 @@
 				<p>CONFIRM PASSWORD</p>
 			</div>
 			<div class="box-container--group">
-				<p>Place Holder</p>
+				<input type="text" name="searchGroup" placeholder="" class="textbox textbox--signup"/>
 			</div>
 		</div>
 		<div class="box-container-signup">
@@ -41,7 +41,7 @@
 				<p>EMAIL</p>
 			</div>
 			<div class="box-container--group">
-				<p>Place Holder</p>
+				<input type="text" name="searchGroup" placeholder="" class="textbox textbox--signup"/>
 			</div>
 		</div>
 		<div class="box-container-signup">
