in progress list

--- a/task-list.html
+++ b/task-list.html
@@ -68,7 +68,24 @@
               class="dropdown-icon dropdown-icon--task"></i></p>
           <p id="due-date" class="content content--due-date">OCT 12</p>
         </div>
-        <div class="container--people">
+        <div class="container--people container--people-inprogress">
+          <div class="box-top">
+            <h1 class="title title--list-inprogress">IN PROGRESS</h1>
+            <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--people" />
+          </div>
+
+          <ul class="people-list">
+            <li>Demetra Spahn</li>
+            <li>Vince Mcdowell</li>
+            <li>Sanjuana Levitsky</li>
+            <li>Rachell Edlund</li>
+            <li>Doug Dunnington</li>
+            <li>Delphine Magno</li>
+            <li>Eric Didion</li>
+            <li>Song Grabill</li>
+          </ul>
+        </div>
+        <div class="container--people container--people-done">
           <div class="box-top">
             <h1 class="title title--list-done">DONE</h1>
             <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--people" />
@@ -129,7 +146,7 @@
 
       <!-- TESTING-->
 
-      
+
 
     </div>
   </div>
