toggle people list implemented

--- a/task-list.html
+++ b/task-list.html
@@ -61,7 +61,7 @@
           <p class="content content--task">Every 2 week!</p>
         </div>
         <div class="box-bottom">
-          <p class="content content--number-of-people content--notdone-people"><span id="in-progress-people">3</span>
+          <p class="content content--number-of-people content--inprogress-people"><span id="in-progress-people">3</span>
             in
             progress<i class="dropdown-icon dropdown-icon--task"></i></p>
           <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i
@@ -107,8 +107,8 @@
           <p class="content content--task"></p>
         </div>
         <div class="box-bottom">
-          <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-          <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--inprogress-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
           <p id="due-date" class="content content--due-date">OCT 12</p>
         </div>
         <div class="container--people container--people-inprogress">
@@ -150,8 +150,8 @@
           <p class="content content--task"></p>
         </div>
         <div class="box-bottom">
-          <p class="content content--number-of-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-          <p class="content content--number-of-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--inprogress-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
           <p id="due-date" class="content content--due-date">OCT 12</p>
         </div>
         <div class="container--people container--people-inprogress">
@@ -200,6 +200,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="./js/menu-pane.js"></script>
+  <script src="./js/task-list.js"></script>
   <script src="./js/universal.js"></script>
 </body>
 
