tab to 2 spaces close button goes back a page

--- a/group-info.html
+++ b/group-info.html
@@ -12,6 +12,7 @@
 	<div class="nav nav--task-top">
 		<div class="button button--menu">MENU</div>
 		<h1 class="title title--nav">BCIT SET B</h1>
+		<img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-goback" />
 	</div>
 	<div class="menu-panel">
 		<h1 class="title title-menu">MENU</h1>
