--- a/preference.html
+++ b/preference.html
@@ -11,8 +11,7 @@
 <body>
   <div class="nav nav--task-top">
     <h1 class="title title--nav title--nav-settings"><img class="setting-button-img-nav-preference" src="./image/setting-icon.png" alt="setting icon" width="30" height="30" />SETTINGS</h1>
-    <!-- TODO THE CLOSE BUTTON SHOULD GO BACK A PAGE, NOT TO THE INDEX PAGE. WILL FIX IT LATER USING JQUERY.-->
-    <a href="./index.html"><img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img" /></a>
+    <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-goback" />
   </div>
 
   <div class="container">
