--- a/group-info.html
+++ b/group-info.html
@@ -29,7 +29,8 @@
 			<li><a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="icon--menu-pane">Settings</a></li>
 		</ul>
 	</div>
-	<div class="container">
+
+	<div class="container container--group-info">
 		<div class="box-container-group">
 			<div class="box-top">
 				<h1>Created: Sept 9, 2018</h1>
