--- a/preference.html
+++ b/preference.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="nav nav--task-top">
+  <div class="nav">
     <h1 class="title title--nav title--nav-settings"><img class="setting-button-img-nav-preference" src="./image/setting-icon.png" alt="setting icon" width="30" height="30" />SETTINGS</h1>
     <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-goback" />
   </div>
