--- a/task-list.html
+++ b/task-list.html
@@ -32,7 +32,7 @@
     </ul>
   </div>
 
-  <div class="container">
+  <div class="container container--task-list">
     <div class="task-filter-sort-bar box-container">
       <div class="filter filter--task">
         <h2 class="label label--filter">FILTER:</h2>
