Add task placeholder

--- a/task-list.html
+++ b/task-list.html
@@ -107,8 +107,10 @@
           <p class="content content--task"></p>
         </div>
         <div class="box-bottom">
-          <p class="content content--number-of-people content--inprogress-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-          <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--inprogress-people"><span id="in-progress-people">3</span>
+            in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i
+              class="dropdown-icon dropdown-icon--task"></i></p>
           <p id="due-date" class="content content--due-date">OCT 12</p>
         </div>
         <div class="container--people container--people-inprogress">
@@ -143,6 +145,7 @@
         </div>
       </div>
 
+      <!--
       <div class="box-container box-container--task">
         <div class="checkbox checkbox-checked"></div>
         <div class="task-left-side">
@@ -150,8 +153,10 @@
           <p class="content content--task"></p>
         </div>
         <div class="box-bottom">
-          <p class="content content--number-of-people content--inprogress-people"><span id="in-progress-people">3</span> in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
-          <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--inprogress-people"><span id="in-progress-people">3</span>
+            in progress<i class="dropdown-icon dropdown-icon--task"></i></p>
+          <p class="content content--number-of-people content--done-people"><span id="done-people">20</span> done<i
+              class="dropdown-icon dropdown-icon--task"></i></p>
           <p id="due-date" class="content content--due-date">OCT 12</p>
         </div>
         <div class="container--people container--people-inprogress">
@@ -185,12 +190,19 @@
           </ul>
         </div>
       </div>
+    -->
 
 
 
       <!-- TESTING-->
 
-
+      <div class="box-container box-container--task">
+        <input type="text" name="task-title" placeholder="Enter a task..." class="textbox textbox--task-title" />
+        <textarea class="textbox textbox--area" placeholder="Enter task details..." rows="4"></textarea>
+        <div class="box-bottom">
+          <h2 class="label label--date">Select Due Date:</h2><input class="input--date" type="date">
+        </div>
+      </div>
 
     </div>
   </div>
