--- a/preference.html
+++ b/preference.html
@@ -92,8 +92,8 @@
     </div>
   </div>
 
-  <div class="box-container  preference--button">CANCEL</div>
-  <div class="box-container  preference--button">SAVE</div>
+  <button class="button preference--button">CANCEL</button>
+  <button class="button preference--button">SAVE</button>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
