--- a/sign in.html
+++ b/sign in.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="nav nav--task-top">
+  <div class="nav">
     <h1 class="title title--nav">TASKLIST</h1>
   </div>
   <div class="container">
