--- a/sign in.html
+++ b/sign in.html
@@ -24,19 +24,17 @@
       </div>
     </div>
     <div class="RememberMe">
-      <span class="checkbox--preference"></span>
+      <input type="checkbox" class="checkbox--preference"/>
       <span class="content--preference">Remember Me</span>
     </div>
-    <div class="box-container-signup">
-      <div class="box-container--group">
-        <h1 class="title title--nav">Sign In</h1>
-      </div>
-    </div>
-    <div class="box-container-signup">
-      <div class="box-container--group">
-        <h1 class="title title--nav">Sign Up</h1>
-      </div>
-    </div>
+
+	  <button class="button button-signin">
+        Sign In
+	  </button>
+	
+    <button class=" button button-signin" onclick="window.location.href='./sign up.html'">
+        Sign Up
+    </button>
   </div>
 </body>
 
