task list menu partially implemented

--- a/task-list.html
+++ b/task-list.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="nav nav--task-top">
-    <div class="button button--menu">MENU</div>
+    <div class="button--menu">MENU</div>
     <h1 class="title title--nav">Dummy Task Group</h1>
-    <a href="./group-info.html"><img src="./image/information-button.png" alt="information button" class="button information-button-img-nav" /></a>
+    <a href="./group-info.html"><img src="./image/information-button.png" alt="information button" class="information-button-img-nav" /></a>
   </div>
 
 
@@ -196,13 +196,16 @@
 
       <!-- TESTING-->
 
-      <div class="box-container box-container--task">
-        <input type="text" name="task-title" placeholder="Enter a task..." class="textbox textbox--task-title" />
-        <textarea class="textbox textbox--area" placeholder="Enter task details..." rows="4"></textarea>
-        <div class="box-bottom">
+      <!--<div id="edit-add-task" class="box-container box-container--task">
+        <form><input required="required" type="text" name="task-title" placeholder="Enter a task..." class="textbox textbox--task-title"><textarea
+            class="textbox textbox--area" placeholder="Enter task details..." rows="4"></textarea>
           <h2 class="label label--date">Select Due Date:</h2><input class="input--date" type="date">
-        </div>
-      </div>
+          <div class="box-bottom">
+            <div class="inline-buttons-container"><button class="button button--cancel-task">CANCEL</button><button
+                type="submit" value="Submit" class="button button--save-task">SAVE</button></div>
+          </div>
+        </form>
+      </div>-->
 
     </div>
   </div>
