--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>TASK APP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="./css/universal.css">
+  <link rel="stylesheet" href="css/universal.css">
 </head>
 
 <body>
@@ -78,6 +78,12 @@
     </div>
     <div class="box-container landing-page--button"><a href="./index.html">GET STARTED!</a></div>
   </div>
+
+
+  <!-- Import and configure the Firebase SDK -->
+  <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
+  <!-- If you do not want to serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+  <script src="./js/firebase-init.js"></script>
 </body>
 
 </html>
