--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         </div>
       </div>
     </div>
-    <div class="box-container landing-page--button"><a href="./index.html">GET STARTED!</a></div>
+    <button class=" button button-signin">
+      Sign Up
+    </button>
   </div>
 
 
