button and layout

--- a/public/main.html
+++ b/public/main.html
@@ -12,7 +12,7 @@
   <div class="nav nav-index">
     <div class="button button--menu button--menu--index">MENU</div>
     <h1 class="title title--nav title--index">Task App</h1>
-    <a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="button setting-button-img-nav" /></a>
+    <a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="setting-button-img-nav" /></a>
   </div>
 
 
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <div class="box-container  create-group-button--index">+ Create Group</div>
+    <button class="button create-group-button--index">+ Create Group</button>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
