added firebase to all pages unified menu button design for all pages

--- a/public/task-list.html
+++ b/public/task-list.html
@@ -212,6 +212,14 @@
   <div class="button button--add-task">
     <img src="./image/plus-icon.png" alt="plus icon" class="icon--add-task">
   </div>
+
+  <!-- Import and configure the Firebase SDK -->
+  <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
+  <!-- If you do not want to serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+  <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
+  <script src="./js/firebase-init.js"></script>
+
+  <!-- JQUERY IMPORT-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="./js/menu-pane.js"></script>
