--- a/public/main.html
+++ b/public/main.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="nav nav-index">
-    <div class="button button--menu button--menu--index">MENU</div>
+    <div class="button--menu button--menu--index">MENU</div>
     <h1 class="title title--nav title--index">Task App</h1>
     <a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="setting-button-img-nav" /></a>
   </div>
@@ -107,6 +107,13 @@
     <button class="button create-group-button--index">+ Create Group</button>
   </div>
 
+  <!-- Import and configure the Firebase SDK -->
+  <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
+  <!-- If you do not want to serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+  <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
+  <script src="./js/firebase-init.js"></script>
+  
+  <!-- JQUERY IMPORT-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="./js/menu-pane.js"></script>
