added link to access task list firebase login shows user info

--- a/public/preference.html
+++ b/public/preference.html
@@ -20,7 +20,7 @@
     <h1 class="title title-menu">MENU</h1>
     <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--menu" />
     <ul class="menu-list">
-      <li><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</li>
+      <li><a href="./main.html"><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</a></li>
       <li><img src="./image/plus-icon-white.png" alt="plus icon" class="icon--menu-pane">Create Group</li>
       <li><img src="./image/list-icon.png" alt="list icon" class="icon--menu-pane">Your Groups</li>
       <ul class="menu-list menu-list-deeper">
@@ -57,7 +57,7 @@
       </div>
       <div>
         <div class="box-container--preference">
-          <span class="content--preference">Jun Jeong</span>
+          <span id="username" class="content--preference">Jun Jeong</span>
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
       </div>
       <div>
         <div class="box-container--preference">
-          <span class="content--preference">junjeongemail@gmail.com</span>
+          <span id="email" class="content--preference">junjeongemail@gmail.com</span>
         </div>
       </div>
     </div>
