--- a/public/main.html
+++ b/public/main.html
@@ -15,12 +15,11 @@
     <a href="./preference.html"><img src="./image/setting-icon.png" alt="setting icon" class="setting-button-img-nav" /></a>
   </div>
 
-
   <div class="menu-panel">
     <h1 class="title title-menu">MENU</h1>
     <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--menu" />
     <ul class="menu-list">
-      <li><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</li>
+      <li><a href="./main.html"><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</a></li>
       <li><img src="./image/plus-icon-white.png" alt="plus icon" class="icon--menu-pane">Create Group</li>
       <li><img src="./image/list-icon.png" alt="list icon" class="icon--menu-pane">Your Groups</li>
       <ul class="menu-list menu-list-deeper">
@@ -78,7 +77,7 @@
       <div>
         <div class="group-box-content--index">
           <div class="group--index">
-            <span class="groups content--index">BCIT CST SET B</span>
+            <span class="groups content--index"><a href="task-list.html">BCIT CST SET B</a></span>
             <span class="group-option--index">
               <span class="exit-group--index">Exit Group</span>
               <span><a href="./group-info.html">
@@ -112,7 +111,7 @@
   <!-- If you do not want to serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
   <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
   <script src="./js/firebase-init.js"></script>
-  
+
   <!-- JQUERY IMPORT-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
