Small changes for preference page
background color changed for light theme

--- a/public/preference.html
+++ b/public/preference.html
@@ -40,7 +40,7 @@
       <div class="box-container--preference">
         <form>
           <div class="theme-option--preference">
-            <input type="radio" name="theme" id="dark_theme" class="checkbox--preference" /><span class="content--preference">Dark</span>
+            <input type="radio" name="theme" id="dark_theme" class="checkbox--preference" checked/><span class="content--preference">Dark</span>
           </div>
           <div class="theme-option--preference">
             <input type="radio" name="theme" id="light_theme" class="checkbox--preference" /><span class="content--preference">Light</span>
