--- a/public/main.html
+++ b/public/main.html
@@ -46,7 +46,7 @@
           <div class="group--index">
             <span class="groups content--index">Healthy Meal Plans!</span>
             <span class="group-option--index">
-              <span class="exit-group--index">Join Group</span>
+              <span class="exit-group--index"><a href="./task-list.html">Join Group</a></span>
               <span><a href="./group-info.html">
                   <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
@@ -54,14 +54,14 @@
           <div class="group--index">
             <span class="groups content--index">BCIT CST SET D</span>
             <span class="group-option--index">
-              <span class="exit-group--index">Join Group</span>
+              <span class="exit-group--index"><a href="./task-list.html">Join Group</a></span>
               <span><a href="./group-info.html">
                   <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
-          <div class="group--index"><span class="groups content--index">Dos Tacos</span>
+          <div class="group--index"><span class="groups content--index">SFU Finance Club</span>
             <span class="group-option--index">
-              <span class="exit-group--index">Join Group</span>
+              <span class="exit-group--index"><a href="./task-list.html">Join Group</a></span>
               <span><a href="./group-info.html">
                   <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
@@ -76,25 +76,26 @@
       </div>
       <div>
         <div class="group-box-content--index">
-          <div class="group--index">
+          <div class="group--index" id = "setB">
             <span class="groups content--index"><a href="task-list.html">BCIT CST SET B</a></span>
             <span class="group-option--index">
-              <span class="exit-group--index">Exit Group</span>
+              <span class="exit-group--index" id = "exit--setB">Exit Group</span>
               <span><a href="./group-info.html">
                   <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
-          <div class="group--index">
+          <div class="group--index" id = "setC">
             <span class="groups content--index">BCIT CST SET C</span>
             <span class="group-option--index">
-              <span class="exit-group--index">Exit Group</span>
+              <span class="exit-group--index" id = "exit--setC">Exit Group</span>
               <span><a href="./group-info.html">
                   <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
           </div>
-          <div class="group--index"><span class="groups content--index">SFU Finance Club</span>
+          <div class="group--index" id = "tacos">
+		    <span class="groups content--index">Dos Tacos</span>
             <span class="group-option--index">
-              <span class="exit-group--index">Exit Group</span>
+              <span class="exit-group--index" id = "exit--tacos">Exit Group</span>
               <span><a href="./group-info.html">
                   <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--index" /></a></span>
             </span>
@@ -117,6 +118,7 @@
     crossorigin="anonymous"></script>
   <script src="./js/menu-pane.js"></script>
   <script src="./js/universal.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </body>
 
