Changes to button navigation

--- a/public/create-group.html
+++ b/public/create-group.html
@@ -15,7 +15,7 @@
 
 	<div class="menu-panel">
 		<h1 class="title title-menu">MENU</h1>
-		<img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--menu" />
+		<a href="./main.html"><img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-goback" /></a>
 		<ul class="menu-list">
 			<li><a href="./main.html"><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</a></li>
 			<li><a href="./create-group.html"><img src="./image/plus-icon-white.png" alt="plus icon" class="icon--menu-pane">Create Group</a></li>
@@ -62,15 +62,6 @@
 			</form>	
 		</div>
 	</div>
-
-	<div class="container">
-		<div class="box-container">
-			<form class="add-task-form" action="#">
-				<div class="box-top">
-					<h2 id = "exitGroup"><a href="./main">EXIT</a></h2>
-				</div>
-			</form>
-		</div>
 	</div>
 
 	<button class="button create-group-button--index"><a href="./main.html">Create Group</a></button>
