--- a/public/group-info.html
+++ b/public/group-info.html
@@ -19,7 +19,8 @@
     <img src="./image/close-button.png" alt="close button" width="21" height="21" class="close-button-img close-button-img--menu" />
     <ul class="menu-list">
       <li><a href="./main.html"><img src="./image/search-icon.png" alt="search icon" class="icon--menu-pane">Find Group</a></li>
-      <li><a href="./create-group.html"><img src="./image/plus-icon-white.png" alt="plus icon" class="icon--menu-pane">Create Group</a></li>
+      <li><a href="./create-group.html"><img src="./image/plus-icon-white.png" alt="plus icon" class="icon--menu-pane">Create
+          Group</a></li>
       <li><img src="./image/list-icon.png" alt="list icon" class="icon--menu-pane">Your Groups</li>
       <ul class="menu-list menu-list-deeper">
         <li><a href="group-info.html">BCIT CST SET B</a></li>
