Commented javascript file

--- a/public/main.html
+++ b/public/main.html
@@ -118,7 +118,7 @@
     crossorigin="anonymous"></script>
   <script src="./js/menu-pane.js"></script>
   <script src="./js/universal.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="./js/main-page.js"></script>
 </body>
 </body>
 
